/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 *
 */

syntax = "proto3";
package teaclave_common_proto;

message UserCredential {
  string id = 1;
  string token = 2;
}

message FileCryptoInfo {
  string schema = 1;
  bytes key = 2;
  bytes iv = 3;
}

message TaskOutputs {
  bytes return_value = 1;
  map<string, bytes> tags_map = 2;
  repeated string log = 3;
}

message TaskFailure {
  string reason = 1;
}

enum TaskStatus {
  Created = 0;
  DataAssigned = 1;
  Approved = 2;
  Staged = 3;
  Running = 4;
  Finished = 10;
  Canceled = 20;
  Failed = 99;
}

enum ExecutorStatus {
  Idle = 0;
  Executing = 1;
}

enum ExecutorCommand {
  NoAction = 0;
  Stop = 1;
  NewTask = 2;
}

message TaskResult {
  oneof result {
    teaclave_common_proto.TaskOutputs Ok = 1;
    teaclave_common_proto.TaskFailure Err = 2;
  }
}

message Entry {
    int64 microsecond = 1;
    bytes ip = 2;
    string user = 3;
    string message = 4;
    bool result = 5;
}
